<resources>
    <string name="app_name">UAS_ML2_221351064</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">KEUKEU FINKA</string>
    <string name="nav_header_subtitle">221351064</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_about">Tentang Aplikasi</string>
    <string name="menu_dataset">Dataset</string>
    <string name="menu_fitur">Fitur</string>
    <string name="menu_model">Model</string>
    <string name="menu_simulasi">Simulasi</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>